--- a/css/style.css
+++ b/css/style.css
@@ -880,19 +880,32 @@ section {
   
   /* Update your media query */
   @media screen and (max-width: 768px) {
+
+    .navbar{
+        min-height: 60px;
+    }
+
+    #home{
+        margin-top: 60px;
+    }
+
     .nav-menu {
-      flex-direction: column;
-      position: absolute;
-      top: 70px;
-      left: -100%;
-      width: 100%;
-      transition: all 0.5s ease;
+        flex-direction: column;
+        position: absolute;
+        top: 70px;
+        left: -100%; /* Starts off-screen */
+        width: 100%;
+        background-color: #333;
+        padding: 1rem 0;
+        transition: all 0.5s ease;
+        opacity: 0;
     }
     
     .nav-menu.active {
       left: 0;
       background-color: #333;
       padding: 1rem 0;
+      opacity: 1;
     }
     
     .hamburger {
