--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,8 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 1.5rem 0;
+    overflow-x: hidden;
+    flex-wrap: wrap;
 }
 
 .logo {
@@ -681,13 +683,22 @@ footer {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     .hero-title {
         font-size: 2.8rem;
     }
 
     .hero-description {
         font-size: 1.1rem;
+    }
+
+    header{
+        position: unset;
+    }
+
+    .nav{
+        flex-direction: column;
+        align-items: flex-start;
     }
 
     .nav-links {
@@ -701,6 +712,8 @@ footer {
         flex-direction: column;
         gap: 1.5rem;
         border-bottom: 1px solid #2d2d2d;
+        overflow-x: hidden;
+        box-sizing: border-box;
     }
 
     .nav-links.active {
